--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
   </head>
   <body>
     <canvas id="webgl"></canvas>
+    <header>
+      <div class="logo">
+        <h3>New Demention</h3>
+      </div>
+
+      <nav>
+        <ul>
+          <li><a href="#">ホーム</a></li>
+          <li><a href="#">お問い合わせ</a></li>
+          <li><a href="#">オンライン相談</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <h2>New Demention</h2>
+    </main>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
