--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>パーティクルLP</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=M+PLUS+1p"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <canvas id="webgl"></canvas>
@@ -23,7 +27,7 @@
     </header>
 
     <main>
-      <h2>New Demention</h2>
+      <h2>New 3D World</h2>
     </main>
     <script type="module" src="/main.js"></script>
   </body>
